fix: 비밀번호 재설정 리뷰 반영 (#125)
