# openapi.json
@@ -6667,26 +6667,6 @@
               }
             }
           },
-          "429": {
-            "description": "AUTH_TOO_MANY_REQUESTS | 인증 서비스 요청 제한을 초과한 경우",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
-          "502": {
-            "description": "AUTH_PROVIDER_ERROR | 인증 서비스 요청 처리에 실패한 경우",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ErrorResponse"
-                }
-              }
-            }
-          },
           "default": {
             "$ref": "#/components/responses/ErrorResponse"
           }
